--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 .App {
-  text-align: center;
+  text-align: left;
 }
 
 .App-logo {
-  height: 40vmin;
+  align-self: flex-end;
+  height: 20vmin;
   pointer-events: none;
 }
 
@@ -18,10 +19,13 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-bottom: 80px;
 }
 
 .App-link {
